update auth docs
